# atomic-maybe-uninit

./: .cirrus.yml  .clippy.toml  .cspell.json  .deny.toml  .git-blame-ignore-revs  .valgrindrc  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  build.rs  error.txt
.cargo/: config.toml
.github/: bors.toml  dependabot.yml  zizmor.yml
.github/.cspell/: project-dictionary.txt  rust-dependencies.txt
.github/rustc/: a.sh  x.sh
.github/rustc/lib/rustlib/x86_64-unknown-linux-gnu/lib/: libaddr2line-cb3e2b4c1e2d9ac2.rlib  libaddr2line-cb3e2b4c1e2d9ac2.rmeta  libadler2-d8ca7bed7aa50c28.rlib  libadler2-d8ca7bed7aa50c28.rmeta  liballoc-5987aa1f36db5552.rlib  libcfg_if-fa90ca68b9a1d3f2.rlib  libcfg_if-fa90ca68b9a1d3f2.rmeta  libcompiler_builtins-33d31afcdcaeeb00.rlib  libcompiler_builtins-33d31afcdcaeeb00.rmeta  libcore-b0d9df971d08cf82.rlib  libgetopts-41236c3dffbebf1b.rlib  libgetopts-41236c3dffbebf1b.rmeta  libgimli-d8b4e298de0acb60.rlib  libhashbrown-b8f6000d38c3a03d.rlib  libhashbrown-b8f6000d38c3a03d.rmeta  liblibc-62f2c9cac6118255.rlib  liblibc-62f2c9cac6118255.rmeta  libmemchr-92d3f514b11ffe6a.rlib  libmemchr-92d3f514b11ffe6a.rmeta  libminiz_oxide-585044ef4773301a.rlib  libminiz_oxide-585044ef4773301a.rmeta  libobject-65c75a5801a1e242.rlib  libpanic_abort-2455c63bb70ec49b.rlib  libpanic_abort-2455c63bb70ec49b.rmeta  libpanic_unwind-3580956e2e4bf317.rlib  libpanic_unwind-3580956e2e4bf317.rmeta  libproc_macro-b918fdde3051966e.rlib  libproc_macro-b918fdde3051966e.rmeta  librustc_demangle-762ef292ed74fad8.rlib  librustc_demangle-762ef292ed74fad8.rmeta  librustc_literal_escaper-7f1dbc736b65432a.rlib  librustc_literal_escaper-7f1dbc736b65432a.rmeta  librustc_std_workspace_alloc-e996130ed8f00528.rlib  librustc_std_workspace_alloc-e996130ed8f00528.rmeta  librustc_std_workspace_core-ab5049566063f29d.rlib  librustc_std_workspace_core-ab5049566063f29d.rmeta  (+11 more)
.github/workflows/: ci.yml  release.yml  test-matrix.json
bench/: Cargo.toml  memcpy.rs
ci/: gen.sh
src/: consume.rs  lib.rs  raw.rs  utils.rs
src/arch/: README.md  aarch64.rs  arm.rs  arm_common.rs  arm_linux.rs  armv6.rs  armv7.rs  armv8.rs  armv8m.rs  avr.rs  bpf.rs  csky.rs  hexagon.rs  loongarch.rs  m68k.rs  mips.rs  mod.rs  msp430.rs  nvptx.rs  partword.rs  powerpc.rs  riscv.rs  s390x.rs  s390x_no_reg_addr.rs  sparc.rs  unsupported.rs  wasm.rs  x86.rs  xtensa.rs
src/arch/cfgs/: arm.rs  arm_linux.rs  armv8.rs  avr.rs  bpf.rs  csky.rs  loongarch.rs  m68k.rs  mips.rs  msp430.rs  powerpc.rs  riscv.rs  s390x.rs  sparc.rs  unsupported.rs  x86.rs  xtensa.rs
src/arch_legacy/: aarch64.rs  arm.rs  arm_linux.rs  armv8.rs  hexagon.rs  loongarch.rs  mips.rs  mod.rs  msp430.rs  powerpc.rs  riscv.rs  s390x.rs  x86.rs
src/detect/: README.md  common.rs  x86.rs  x86_64.rs
src/tests/: helper.rs  memcpy.rs  mod.rs
target-specs/: armebv4t-unknown-linux-gnueabi.json  armebv5te-unknown-linux-gnueabi.json  armebv6-unknown-linux-gnueabi.json  armebv7-unknown-linux-gnueabi.json  armebv8r-none-eabi.json  armebv8r-none-eabihf.json  armv8a-none-eabi.json  armv8r-none-eabi.json
tests/asm-test/: Cargo.toml
tests/asm-test/asm/atomic-maybe-uninit/: aarch64.asm  aarch64_ilp32.asm  aarch64_lse.asm  aarch64_lse2_lse128.asm  aarch64_lse2_lse128_rcpc3.asm  aarch64_lse2_lse128_rcpc3_msvc.asm  aarch64_lse_lse2.asm  aarch64_lse_lse2_rcpc3.asm  aarch64_lse_msvc.asm  aarch64_msvc.asm  aarch64_rcpc.asm  arm64ec.asm  armv4t.asm  armv4t_thumb.asm  armv5te.asm  armv5te_thumb.asm  armv6_cp15_barrier.asm  armv6_kuser_memory_barrier.asm  armv6_thumb.asm  armv7a.asm  armv7m.asm  armv8a.asm  armv8a_thumb.asm  armv8a_thumb_msvc.asm  armv8m_base.asm  armv8m_main.asm  avr.asm  avr_lowbytefirst.asm  avr_lowbytefirst_rmw.asm  avr_rmw.asm  avr_tinyencoding.asm  avr_tinyencoding_lowbytefirst.asm  csky.asm  hexagon.asm  loongarch32.asm  loongarch64.asm  loongarch64_v1_1.asm  m68k.asm  mips.asm  mips32r6.asm  (+42 more)
tests/asm-test/asm/core/: aarch64.asm  aarch64_be.asm  aarch64_ilp32.asm  aarch64_lse.asm  aarch64_lse2_lse128.asm  aarch64_lse2_lse128_rcpc3.asm  aarch64_lse2_lse128_rcpc3_msvc.asm  aarch64_lse_lse2.asm  aarch64_lse_lse2_rcpc3.asm  aarch64_lse_msvc.asm  aarch64_msvc.asm  aarch64_rcpc.asm  arm64ec.asm  armv4t.asm  armv4t_thumb.asm  armv5te.asm  armv5te_thumb.asm  armv6_cp15_barrier.asm  armv6_thumb.asm  armv7a.asm  armv7m.asm  armv8a.asm  armv8a_thumb.asm  armv8a_thumb_msvc.asm  armv8m_base.asm  armv8m_main.asm  avr_tinyencoding_lowbytefirst.asm  csky.asm  hexagon.asm  loongarch32.asm  loongarch64.asm  loongarch64_v1_1.asm  m68k.asm  mips.asm  mips32r6.asm  mips32r6el.asm  mips64.asm  mips64el.asm  mips64r6.asm  mips64r6el.asm  (+33 more)
tests/asm-test/src/: lib.rs
tests/asm-test/tests/: test.rs
tests/avr/: Cargo.toml  rust-toolchain.toml
tests/avr/.cargo/: config.toml
tests/avr/src/: main.rs
tests/bpf/: .gitignore  Cargo.toml  README.md
tests/bpf/bpf-test/: Cargo.toml  build.rs
tests/bpf/bpf-test-common/: Cargo.toml
tests/bpf/bpf-test-common/src/: lib.rs
tests/bpf/bpf-test-ebpf/: Cargo.toml  build.rs
tests/bpf/bpf-test-ebpf/src/: lib.rs  main.rs
tests/bpf/bpf-test/src/: main.rs
tests/cortex-m/: Cargo.toml
tests/cortex-m/.cargo/: config.toml
tests/cortex-m/src/: main.rs
tests/include/: basic.rs
tests/m68k/: Cargo.toml
tests/m68k/.cargo/: config.toml
tests/m68k/src/: main.rs
tests/msp430/: Cargo.toml
tests/msp430/src/: main.rs
tests/no-std-linux/: Cargo.toml
tests/no-std-linux/.cargo/: config.toml
tests/no-std-linux/src/: main.rs
tests/no-std-qemu/: Cargo.toml  build.rs
tests/no-std-qemu/.cargo/: config.toml
tests/no-std-qemu/src/: main.rs
tests/sparc/: Cargo.toml  rust-toolchain.toml
tests/sparc/.cargo/: config.toml
tests/sparc/src/: main.rs
tests/xtensa/: Cargo.toml
tests/xtensa/.cargo/: config.toml
tests/xtensa/src/: main.rs
tools/: build.sh  matrix.sh  no-std.sh  publish.sh  runner.sh  systemsim-test.sh  target_spec.sh  test.sh  tidy.sh  tsim-leon3-test-runner.sh
tools/ci/: gen.sh
tools/valgrind/: aarch64.supp  arm.supp  armv7.supp  i686.supp  powerpc64.supp  riscv64.supp  s390x.supp  x86_64.supp
