[package]
name = "bench"
edition = "2021"

[dependencies]
atomic-maybe-uninit = { path = ".." }

atomic-memcpy = { version = "0.2", features = ["inline-always"] }

[dev-dependencies]
criterion = { default-features = false, git = "https://github.com/taiki-e/criterion.rs.git", rev = "8617cd7" } # reduce deps

[[bench]]
name = "memcpy"
path = "memcpy.rs"
harness = false

[lints]
workspace = true
