[package]
name = "avr-test"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
atomic-maybe-uninit = { path = "../.." }

avr-device = "0.6"
paste = "1"
ufmt = "0.2"

[target.avr-unknown-gnu-atmega2560.dependencies]
arduino-hal = { git = "https://github.com/taiki-e/avr-hal.git", branch = "dev", features = ["arduino-mega2560"] }

[workspace]
resolver = "2"

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
# unsafe_op_in_unsafe_fn = "warn" # Set at crate-level instead since https://github.com/rust-lang/rust/pull/100081 is not available on MSRV

[profile.dev]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
