[workspace]
resolver = "2"
members = [
    "bpf-test",
    "bpf-test-common",
    "bpf-test-ebpf",
]
default-members = ["bpf-test", "bpf-test-common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
# Use patched aya-build for Cargo features and target features support.
aya = { git = "https://github.com/taiki-e/aya", rev = "9b2559f", default-features = false }
aya-build = { git = "https://github.com/taiki-e/aya", rev = "9b2559f", default-features = false }
aya-ebpf = { git = "https://github.com/taiki-e/aya", rev = "9b2559f", default-features = false }
aya-log = { git = "https://github.com/taiki-e/aya", rev = "9b2559f", default-features = false }
aya-log-ebpf = { git = "https://github.com/taiki-e/aya", rev = "9b2559f", default-features = false }

anyhow = { version = "1", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5.20", default-features = false, features = ["std"] }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.40.0", default-features = false }
which = { version = "6.0.0", default-features = false }

[profile.release.package.bpf-test-ebpf]
debug = 2
codegen-units = 1
