[workspace]
resolver = "2"
members = [
    "bpf-test",
    "bpf-test-common",
    "bpf-test-ebpf",
]
default-members = ["bpf-test", "bpf-test-common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
# Use patched aya-build for Cargo features and target-cpu support.
aya = { git = "https://github.com/taiki-e/aya", rev = "4f701b550c2aed060cf1a6e001cf979df9ca24e7", default-features = false }
aya-build = { git = "https://github.com/taiki-e/aya", rev = "4f701b550c2aed060cf1a6e001cf979df9ca24e7", default-features = false }
aya-ebpf = { git = "https://github.com/taiki-e/aya", rev = "4f701b550c2aed060cf1a6e001cf979df9ca24e7", default-features = false }
aya-log = { git = "https://github.com/taiki-e/aya", rev = "4f701b550c2aed060cf1a6e001cf979df9ca24e7", default-features = false }
aya-log-ebpf = { git = "https://github.com/taiki-e/aya", rev = "4f701b550c2aed060cf1a6e001cf979df9ca24e7", default-features = false }

anyhow = { version = "1", default-features = false }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.40.0", default-features = false }
which = { version = "6.0.0", default-features = false }

[profile.release.package.bpf-test-ebpf]
debug = 2
codegen-units = 1
strip = false
