[package]
name = "msp430-test"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
atomic-maybe-uninit = { path = "../.." }

msp430-rt = "0.4"
msp430f5529 = { git = "https://github.com/cr1901/msp430f5529", rev = "23946ef9bb0365caabd2c30ad14c2c9ab2d425c7", features = ["rt"] }
paste = "1"
ufmt = "0.2"

[workspace]
resolver = "2"

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
# unsafe_op_in_unsafe_fn = "warn" # Set at crate-level instead since https://github.com/rust-lang/rust/pull/100081 is not available on MSRV

[profile.dev]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
