[package]
name = "cortex-m-test"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]
resolver = "2"

[dependencies]
atomic-maybe-uninit = { path = "../.." }

paste = "1"
semihosting = { version = "0.1", features = ["stdio", "panic-handler"] }

[target.'cfg(all(target_arch = "arm", target_feature = "mclass"))'.dependencies]
cortex-m-rt = "0.7"
