[package]
name = "no-std-qemu-test"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]
resolver = "2"

[dependencies]
atomic-maybe-uninit = { path = "../.." }

paste = "1"
semihosting = { version = "0.1", features = ["stdio", "panic-handler"] }

# cfg(target_feature = "mclass") is not available on stable/beta.
[target.thumbv6m-none-eabi.dependencies]
cortex-m-rt = "0.7"
[target.thumbv7m-none-eabi.dependencies]
cortex-m-rt = "0.7"
[target.thumbv7em-none-eabi.dependencies]
cortex-m-rt = "0.7"
[target.thumbv7em-none-eabihf.dependencies]
cortex-m-rt = "0.7"
[target.'thumbv8m.base-none-eabi'.dependencies]
cortex-m-rt = "0.7"
[target.'thumbv8m.main-none-eabi'.dependencies]
cortex-m-rt = "0.7"
[target.'thumbv8m.main-none-eabihf'.dependencies]
cortex-m-rt = "0.7"
