[package]
name = "xtensa-test"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
atomic-maybe-uninit = { path = "../.." }

paste = "1"

[target.xtensa-esp32-none-elf.dependencies]
esp-println = { version = "0.12", default-features = false, features = ["uart", "esp32"] }
esp-hal = { version = "0.22", features = ["esp32"] }
[target.xtensa-esp32s2-none-elf.dependencies]
esp-println = { version = "0.12", default-features = false, features = ["uart", "esp32s2"] }
esp-hal = { version = "0.21", features = ["esp32s2"] }
[target.xtensa-esp32s3-none-elf.dependencies]
esp-println = { version = "0.12", default-features = false, features = ["uart", "esp32s3"] }
esp-hal = { version = "0.21", features = ["esp32s3"] }

[workspace]
resolver = "2"

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
# unsafe_op_in_unsafe_fn = "warn" # Set at crate-level instead since https://github.com/rust-lang/rust/pull/100081 is not available on MSRV

[profile.dev]
opt-level = 'z'

[profile.release]
opt-level = 'z'
