[package]
name = "bpf-test-ebpf"
version = "0.1.0"
edition.workspace = true

[features]
default = []
i32 = []
u32 = []

[dependencies]
bpf-test-common = { path = "../bpf-test-common" }
atomic-maybe-uninit = { path = "../../.." }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
paste = "1"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "bpf-test"
path = "src/main.rs"
