[package]
name = "bpf-test-ebpf"
version = "0.0.0"
edition.workspace = true
publish = false

license = "MIT"

[features]
default = ["isize"]
isize = []
usize = []
i32 = []
u32 = []
i64 = []
u64 = []

[dependencies]
bpf-test-common = { path = "../bpf-test-common" }
atomic-maybe-uninit = { path = "../../.." }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
paste = "1"

[[bin]]
name = "bpf-test"
path = "src/main.rs"
